tree-sitter/test/corpus/function.txt
==============
Empty Function
==============

func main() {};

---

(source_file
    (function_item
        name: (identifier)
        parameters: (func_parameter_list)
        body: (block)))

===============
Implicit Return
===============

func main() -> U32 {
    12345
};

---

(source_file
    (function_item
        name: (identifier)
        parameters: (func_parameter_list)
        return_type: (simple_path
            (identifier))
        body: (block
            trailing: (number))))

=========
Variables
=========

func main() -> U32 {
    let foo: U32 = 12345;
    let bar = foo;
    bar
};

---

(source_file
    (function_item
        name: (identifier)
        parameters: (func_parameter_list)
        return_type: (simple_path
            (identifier))
        body: (block
            (let_statement
                name: (identifier)
                type: (simple_path
                    (identifier))
                value: (number))
            (let_statement
                name: (identifier)
                value: (simple_path
                    (identifier)))
            trailing: (simple_path
                (identifier)))))

==========
Parameters
==========

func greet(person: String, from hometown: String, times 1234: Integer) {};

---

(source_file
    (function_item
        name: (identifier)
        parameters: (func_parameter_list
            (func_parameter
                pattern: (identifier)
                type: (simple_path
                    (identifier)))
            (func_parameter
                name: (identifier)
                pattern: (identifier)
                type: (simple_path
                    (identifier)))
            (func_parameter
                name: (identifier)
                pattern: (number)
                type: (simple_path
                    (identifier))))
        body: (block)))

========
Generics
========

func foo<T, U: V, W>() -> W {};

---

(source_file
    (function_item
        name: (identifier)
        generics: (generic_parameter_list
            (generic_parameter
                name: (identifier))
            (generic_parameter
                name: (identifier)
                bounds: (simple_path
                    (identifier)))
            (generic_parameter
                name: (identifier)))
        parameters: (func_parameter_list)
        return_type: (simple_path
            (identifier))
        body: (block)))
